# MedGraphRAG-ollama-zh

./: .gitignore  Modelfile  agentic_chunker.py  cleangraph.py  config.py  creat_graph.py  dataloader.py  pyproject.toml  run_cons.py  run_infr.py  summerize.py  utils.py
camel/configs/: __init__.py
camel/models/: __init__.py  anthropic_model.py  gemini_model.py  model_factory.py  ollama_model.py
camel/utils/: __init__.py
langchain_helper/: extraction.py  output_parser.py
