[project]
name = "medgraphrag"
version = "0.1.0"
description = ""
authors = [
    {name = "Chengzong Li"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "langchain (>=0.3.14,<0.4.0)",
    "tiktoken (>=0.8.0,<0.9.0)",
    "openai (>=1.59.8,<2.0.0)",
    "langsmith (>=0.1.40,<0.2.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "unstructured (>=0.10.30,<0.11.0)",
    "langchain-community (>=0.3.14,<0.4.0)",
    "neo4j (>=5.27.0,<6.0.0)",
    "pillow (>=10.4.0,<11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
